; ModuleID = '/home/carl/AnghaBench/php-src/ext/dba/libcdb/extr_cdb.c_cdb_init.c'
source_filename = "/home/carl/AnghaBench/php-src/ext/dba/libcdb/extr_cdb.c_cdb_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.cdb = type { i32* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @cdb_init(%struct.cdb* %0, i32* %1) #0 {
  %3 = alloca %struct.cdb*, align 8
  %4 = alloca i32*, align 8
  store %struct.cdb* %0, %struct.cdb** %3, align 8
  store i32* %1, i32** %4, align 8
  %5 = load %struct.cdb*, %struct.cdb** %3, align 8
  %6 = call i32 @cdb_free(%struct.cdb* %5)
  %7 = load %struct.cdb*, %struct.cdb** %3, align 8
  %8 = call i32 @cdb_findstart(%struct.cdb* %7)
  %9 = load i32*, i32** %4, align 8
  %10 = load %struct.cdb*, %struct.cdb** %3, align 8
  %11 = getelementptr inbounds %struct.cdb, %struct.cdb* %10, i32 0, i32 0
  store i32* %9, i32** %11, align 8
  ret void
}

declare dso_local i32 @cdb_free(%struct.cdb*) #1

declare dso_local i32 @cdb_findstart(%struct.cdb*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
